# amitools

./: .editorconfig  .gitignore  .readthedocs.yaml  .travis.yml  CHANGELOG.md  Dockerfile  MANIFEST.in  Makefile  README  README.WIN  README.md  docker-tox  fdtool  geotool  hunktool  local-tox  pyproject.toml  rdbtool  requirements-dev.txt  requirements-test.txt  setup.cfg  setup.py  tox.ini  typetool  vamos  vamospath  xdfscan  xdftool
.github/workflows/: test.yml
amitools/: ADFScanner.py  ELF.py  FileScanner.py  Hunk.py  HunkDisassembler.py  HunkReader.py  HunkRelocate.py  HunkScanner.py  HunkShow.py  LHAScanner.py  Utils.py
amitools/binfmt/: BinFmt.py  BinImage.py  Disassemble.py  Dumper.py  Relocate.py
amitools/elf/: BinFmtELF.py  DwarfDebugLine.py  ELF.py  ELFDumper.py  ELFFile.py  ELFReader.py  __init__.py
config/: sample_vamosrc
doc/: rdbtool.txt  vamos-lib.md  vamos.md  xdftool.txt
docs/: conf.py  index.rst  rdbtool.txt  romtool.md  vamos.md  xdfscan.txt
hacks/: fix_bsrl.py
machine/: emu_test.py  mem.c  mem.h  my_conf.h  pycpu.pyx  pymem.pyx  pytraps.pyx  traps.c  traps.h
musashi/: .gitignore  Makefile  emu.pyx  emu_test.py  history.txt  m68k.h  m68k.py  m68k_in.c  m68kconf.h  m68kcpu.c  m68kcpu.h  m68kdasm.c  m68kfpu.c  m68kmake  m68kmake.c  m68kops.c  makefile.win  mem.c  mem.h  musashi_dll.def  pycpu.pyx  pymem.pyx  pytraps.pyx  setup.py  traps.c  traps.h
pyadf/: __init__.py  adflib.py
test/: .gitignore  Makefile  README.md  conftest.py  decode-double  decode-float  pytest.ini  sasc.vamosrc  test.vamosrc  vamos-compare  vamos-test  vtest.py
(+788 files in other folders)
